--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/psf_sq.gif" alt="" /></a>
 										<header>
 											<h3>Point Spread Function (PSF)</h3>
 										</header>
