add research and outreach items

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<!-- Logo -->
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
-							<h1 id="title">Tianqing</h1>
+							<h1 id="title">Tianqing Zhang </h1>
 							<p>Observational Cosmologist</p>
 						</div>
 
@@ -29,8 +29,8 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
-								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
-								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
+								<li><a href="#research" id="research-link"><span class="icon solid fa-th">Research</span></a></li>
+								<li><a href="#about" id="about-link"><span class="icon solid fa-user">Outreach</span></a></li>
 								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
 							</ul>
 						</nav>
@@ -61,22 +61,21 @@
 							</header>
 
 							<footer>
-								<a href="#portfolio" class="button scrolly">About Me</a>
+								<a href="#research" class="button scrolly">About My Research</a>
 							</footer>
 
 						</div>
 					</section>
 
-				<!-- Portfolio -->
-					<section id="portfolio" class="two">
+				<!-- Research -->
+					<section id="research" class="two">
 						<div class="container">
 
 							<header>
 								<h2>Research</h2>
 							</header>
 
-							<p>My research utilize <strong> statistical and machine learning methods</strong> to extract information on <strong>large photometric survey dataset</strong> for weak gravitational lensing, such as the Vera R. Observatory's Legacy Survey of Space and Time (LSST) and the Subaru Telescope's Hyper Suprime-Cam (HSC).</p>
-							<p> I also work on a number of miscellaneous projects on astrophysics, machine learning</p>
+							<p>My research studies <strong>weak gravitational lensing</strong>, by utilizing <strong> statistical and machine learning methods</strong> to extract information on <strong>large photometric survey dataset</strong>, such as the Vera R. Observatory's Legacy Survey of Space and Time (LSST) and the Subaru Telescope's Hyper Suprime-Cam (HSC).</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
@@ -87,21 +86,21 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/rgb4k.png" alt="" /></a>
 										<header>
-											<h3>Bayesian Weak Lensing Inference</h3>
+											<h3>Image Simulation</h3>
 										</header>
 									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/nz_plot.png" alt="" /></a>
 										<header>
-											<h3>Samle Redshift Distribution</h3>
+											<h3>Bayesian Weak Lensing Inference</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/lens.png" alt="" /></a>
 										<header>
 											<h3>Clustering and Galaxy-Galaxy Lensing</h3>
 										</header>
@@ -109,13 +108,13 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/gp_sq.png" alt="" /></a>
 										<header>
 											<h3>Shear Catalog Emulator</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/parallax.png" alt="" /></a>
 										<header>
 											<h3>Extragalactic Parallax</h3>
 										</header>
@@ -128,15 +127,59 @@
 
 				<!-- About Me -->
 					<section id="about" class="three">
-						<div class="container">
-
 							<header>
-								<h2>About Me</h2>
+								<h2>Community Services</h2>
 							</header>
+						
+						<div class="row">
 
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
-							<p>Not much</p>
+								<div class="col-4 col-12-mobile">
+									<article class="item">
+										<!-- <a href="#" class="image fit"><img src="images/nz_plot.png" alt="" /></a> -->
+										<header>
+											<h3>McWilliams Software Development Series</h3>
+										</header>
+									</article>
+									<article class="item">
+										<!-- <a href="#" class="image fit"><img src="images/nz_plot.png" alt="" /></a> -->
+										<header>
+											<h3>CMU Physics Graduate Program Service</h3>
+										</header>
+									</article>
+								</div>
+
+								<div class="col-4 col-12-mobile">
+									<article class="item">
+										<!-- <a href="#" class="image fit"><img src="images/nz_plot.png" alt="" /></a> -->
+										<header>
+											<h3>CMU Physics Concept Outreach</h3>
+										</header>
+									</article>
+									<article class="item">
+										<!-- <a href="#" class="image fit"><img src="images/nz_plot.png" alt="" /></a> -->
+										<header>
+											<h3>DESC Membership Committee</h3>
+										</header>
+									</article>
+								</div>
+								<div class="col-4 col-12-mobile">
+									<article class="item">
+										<!-- <a href="#" class="image fit"><img src="images/nz_plot.png" alt="" /></a> -->
+										<header>
+											<h3>SJTU Astronomy Club</h3>
+										</header>
+									</article>
+									<article class="item">
+										<!-- <a href="#" class="image fit"><img src="images/nz_plot.png" alt="" /></a> -->
+										<header>
+											<h3>Shanghai S&T Museum Volunteer</h3>
+										</header>
+									</article>
+								</div>
+							<!-- <a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a> -->
+
+							<p></p>
 
 						</div>
 					</section>
