add a bunch of stuff

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
+							<span class="image avatar48"><img src="images/profile_pic.jpg" alt="" /></span>
 							<h1 id="title">Tianqing Zhang </h1>
 							<p>Observational Cosmologist</p>
 						</div>
@@ -30,7 +30,7 @@
 							<ul>
 								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
 								<li><a href="#research" id="research-link"><span class="icon solid fa-th">Research</span></a></li>
-								<li><a href="#about" id="about-link"><span class="icon solid fa-user">Outreach</span></a></li>
+								<li><a href="#service" id="about-link"><span class="icon solid fa-user">Outreach</span></a></li>
 								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
 							</ul>
 						</nav>
@@ -56,9 +56,9 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Tianqing</strong>
-								<p>This is my personal website. It is still under construction...</p>
+								<h2 class="alt">Hi! I'm <strong>Tianqing Zhang</strong>
 							</header>
+							<p>I am a graduate student at McWilliams Center for Cosmology, Carnegie Mellon University. This fall, I will join University of Pittsburgh Department of Physics and Astronomy as a Research Assistant Professor</p>
 
 							<footer>
 								<a href="#research" class="button scrolly">About My Research</a>
@@ -75,10 +75,10 @@
 								<h2>Research</h2>
 							</header>
 
-							<p>My research studies <strong>weak gravitational lensing</strong>, by utilizing <strong> statistical and machine learning methods</strong> to extract information on <strong>large photometric survey dataset</strong>, such as the Vera R. Observatory's Legacy Survey of Space and Time (LSST) and the Subaru Telescope's Hyper Suprime-Cam (HSC).</p>
+							<p>My research studies <strong>weak gravitational lensing</strong>, by utilizing <strong> statistical and machine learning methods</strong> to extract information from <strong>large photometric survey dataset</strong>, such as the Vera R. Observatory's Legacy Survey of Space and Time (LSST) and the Subaru Telescope's Hyper Suprime-Cam (HSC).</p>
 
 							<div class="row">
-								<div class="col-4 col-12-mobile">
+								<div class="col-6 col-12-mobile">
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/psf_sq.gif" alt="" /></a>
 										<header>
@@ -92,7 +92,7 @@
 										</header>
 									</article>
 								</div>
-								<div class="col-4 col-12-mobile">
+								<div class="col-6 col-12-mobile">
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/nz_plot.png" alt="" /></a>
 										<header>
@@ -106,80 +106,26 @@
 										</header>
 									</article>
 								</div>
-								<div class="col-4 col-12-mobile">
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/gp_sq.png" alt="" /></a>
-										<header>
-											<h3>Shear Catalog Emulator</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/parallax.png" alt="" /></a>
-										<header>
-											<h3>Extragalactic Parallax</h3>
-										</header>
-									</article>
-								</div>
+
 							</div>
 
 						</div>
 					</section>
 
 				<!-- About Me -->
-					<section id="about" class="three">
+					<section id="service" class="three">
 							<header>
-								<h2>Community Services</h2>
+								<h2>Services to the Profession</h2>
 							</header>
 						
-						<div class="row">
+						<div class="container">
+						<center>
+							<p> LSST-DESC Collaboration Council <br>
 
+							LSST-DESC Membership Committee</p>
 
-								<div class="col-4 col-12-mobile">
-									<article class="item">
-										<!-- <a href="#" class="image fit"><img src="images/nz_plot.png" alt="" /></a> -->
-										<header>
-											<h3>McWilliams Software Development Series</h3>
-										</header>
-									</article>
-									<article class="item">
-										<!-- <a href="#" class="image fit"><img src="images/nz_plot.png" alt="" /></a> -->
-										<header>
-											<h3>CMU Physics Graduate Program Service</h3>
-										</header>
-									</article>
-								</div>
+						</center>
 
-								<div class="col-4 col-12-mobile">
-									<article class="item">
-										<!-- <a href="#" class="image fit"><img src="images/nz_plot.png" alt="" /></a> -->
-										<header>
-											<h3>CMU Physics Concept Outreach</h3>
-										</header>
-									</article>
-									<article class="item">
-										<!-- <a href="#" class="image fit"><img src="images/nz_plot.png" alt="" /></a> -->
-										<header>
-											<h3>DESC Membership Committee</h3>
-										</header>
-									</article>
-								</div>
-								<div class="col-4 col-12-mobile">
-									<article class="item">
-										<!-- <a href="#" class="image fit"><img src="images/nz_plot.png" alt="" /></a> -->
-										<header>
-											<h3>SJTU Astronomy Club</h3>
-										</header>
-									</article>
-									<article class="item">
-										<!-- <a href="#" class="image fit"><img src="images/nz_plot.png" alt="" /></a> -->
-										<header>
-											<h3>Shanghai S&T Museum Volunteer</h3>
-										</header>
-									</article>
-								</div>
-							<!-- <a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a> -->
-
-							<p></p>
 
 						</div>
 					</section>
