--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
+								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
 								<li><a href="#research" id="research-link"><span class="icon solid fa-th">Research</span></a></li>
-								<li><a href="#service" id="about-link"><span class="icon solid fa-user">Outreach</span></a></li>
 								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
 							</ul>
 						</nav>
@@ -56,19 +56,45 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Tianqing Zhang</strong>
+								<h2 class="alt"><strong>Tianqing Zhang</strong>
 							</header>
-							<p>I am a graduate student at McWilliams Center for Cosmology, Carnegie Mellon University. This fall, I will join University of Pittsburgh Department of Physics and Astronomy as a Research Assistant Professor</p>
+							<p></p>
 
 							<footer>
-								<a href="#research" class="button scrolly">About My Research</a>
+								<a href="data/cv_apr_2023.pdf" class="button scrolly">My CV</a>
+							</footer>
+							<footer>
+								<a href="https://ui.adsabs.harvard.edu/search/p_=0&q=docs(library%2Fe-oFFVJMSqifbMoeN_iXSw)&sort=date%20desc%2C%20bibcode%20desc" class="button scrolly">Publication List</a>
 							</footer>
 
 						</div>
 					</section>
 
+
+				<!-- About Me -->
+					<section id="about" class="two">
+							<header>
+								<h2>About Me</h2>
+							</header>
+
+						<div class="container">
+
+						<p> I am an observational cosmologist based at Pittsburgh, USA. I am a graduate student at McWilliams Center for Cosmology, Carnegie Mellon University. This fall, I will join University of Pittsburgh Department of Physics and Astronomy as a Research Assistant Professor. <br> <br>
+
+						Prior to grad school, I did my undergrad at Duke University and Shanghai Jiao Tong University. I was passionate about Astronomy since high school. <br><br>
+
+						Outside research, I spend my time building both local and international Astronomy community, to make Astronomy more accessible and inclusive to everyone. <br>
+						 </p>
+
+
+
+
+						</div>
+					</section>
+
+
 				<!-- Research -->
-					<section id="research" class="two">
+					<section id="research" class="three">
 						<div class="container">
 
 							<header>
@@ -112,23 +138,6 @@
 						</div>
 					</section>
 
-				<!-- About Me -->
-					<section id="service" class="three">
-							<header>
-								<h2>Services to the Profession</h2>
-							</header>
-						
-						<div class="container">
-						<center>
-							<p> LSST-DESC Collaboration Council <br>
-
-							LSST-DESC Membership Committee</p>
-
-						</center>
-
-
-						</div>
-					</section>
 
 				<!-- Contact -->
 					<section id="contact" class="four">
