add at work photo and profile pic

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
+								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Home</span></a></li>
 								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
 								<li><a href="#research" id="research-link"><span class="icon solid fa-th">Research</span></a></li>
 								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
@@ -79,15 +79,25 @@
 
 						<div class="container">
 
-						<p> I am an observational cosmologist based at Pittsburgh, USA. I am a graduate student at McWilliams Center for Cosmology, Carnegie Mellon University. This fall, I will join University of Pittsburgh Department of Physics and Astronomy as a Research Assistant Professor. <br> <br>
+							<div class="row">
+								<div class="col-6 col-12-mobile">
+									<p> I am an observational cosmologist based at Pittsburgh, USA. I am a graduate student at McWilliams Center for Cosmology, Carnegie Mellon University. This fall, I will join University of Pittsburgh Department of Physics and Astronomy as a Research Assistant Professor. <br> <br>
 
-						Prior to grad school, I did my undergrad at Duke University and Shanghai Jiao Tong University. I was passionate about Astronomy since high school. <br><br>
+									Prior to grad school, I did my undergrad at Duke University and Shanghai Jiao Tong University. I was passionate about Astronomy since high school. <br><br>
 
-						Outside research, I spend my time building both local and international Astronomy community, to make Astronomy more accessible and inclusive to everyone. <br>
-						 </p>
+									Outside research, I spend my time building both local and international Astronomy community, to make Astronomy more accessible and inclusive to everyone. <br>
+									 </p>
+									
+								</div>
+								<div class="col-6 col-12-mobile">
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/at_work.jpg" alt="" /></a>
+										<header>
+											<h3>Credit: Jocelyn Zhang</h3>
+										</header>
+								</div>
 
-
-
+							</div>
 
 						</div>
 					</section>
