--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							<p></p>
 
 							<footer>
-								<a href="data/cv_apr_2023.pdf" class="button scrolly">My CV</a>
+								<a href="data/cv_nov_2024.pdf" class="button scrolly">My CV</a>
 							</footer>
 							<footer>
 								<a href="https://ui.adsabs.harvard.edu/search/p_=0&q=docs(library%2Fe-oFFVJMSqifbMoeN_iXSw)&sort=date%20desc%2C%20bibcode%20desc" class="button scrolly">Publication List</a>
