update about me

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Prologue by HTML5 UP</title>
+		<title>Tianqing Zhang</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,7 +20,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/profile_pic.jpg" alt="" /></span>
+							<span class="image avatar48"><img src="images/tianqing_head.jpeg" alt="" /></span>
 							<h1 id="title">Tianqing Zhang </h1>
 							<p>Observational Cosmologist</p>
 						</div>
@@ -81,20 +81,31 @@
 
 							<div class="row">
 								<div class="col-6 col-12-mobile">
-									<p> I am an observational cosmologist based at Pittsburgh, USA. I am a graduate student at McWilliams Center for Cosmology, Carnegie Mellon University. This fall, I will join University of Pittsburgh Department of Physics and Astronomy as a Research Assistant Professor. <br> <br>
+									<p> Hello there!  <br> <br>
 
-									Prior to grad school, I did my undergrad at Duke University and Shanghai Jiao Tong University. I was passionate about Astronomy since high school. <br><br>
+									I am an observational cosmologist. I use large extragalactic datasets to study the evolution of the universe, nature of dark matter, and dark energy. I use techniques such as are weak gravitational lensing, photometric redshift, etc. If you talk to me, you will probably hear words like PSF, photo-z, LSST, HSC, blah blah blah.   <br> <br>
 
-									Outside research, I spend my time building both local and international Astronomy community, to make Astronomy more accessible and inclusive to everyone. <br>
+									I am Research Assistant Professor at University of Pittsburgh and a LINCC Frameworks research scientist. Previously, I was a graduate student at McWilliams Center for Cosmology, Carnegie Mellon University. I did my undergrad at Duke University and Shanghai Jiao Tong University. I have been passionate about Astronomy since high school. <br> <br>
+
+									I am based in Pittsburgh, PA. Sometimes I show up in California. <br> <br>
+
+									Outside research, I like to hike, build Astronomy community, and play low-intensity basketball...  <br>
 									 </p>
 									
 								</div>
-								<div class="col-6 col-12-mobile">
+								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/at_work.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/pumpking_head.jpeg" alt="" /></a>
 										<header>
-											<h3>Credit: Jocelyn Zhang</h3>
+											<h3> &#127875 &#127875 &#127875 </h3>
 										</header>
+								<div class="col-3 col-12-mobile">
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/point_reyes.jpeg" alt="" /></a>
+										<header>
+											<h3> Point Reyes, CA <br> <br>Credit: Jocelyn Zhang</h3>
+										</header>
+								</div>
 								</div>
 
 							</div>
@@ -111,7 +122,7 @@
 								<h2>Research</h2>
 							</header>
 
-							<p>My research studies <strong>weak gravitational lensing</strong>, by utilizing <strong> statistical and machine learning methods</strong> to extract information from <strong>large photometric survey dataset</strong>, such as the Vera R. Observatory's Legacy Survey of Space and Time (LSST) and the Subaru Telescope's Hyper Suprime-Cam (HSC).</p>
+							<p>My research studies weak gravitational lensing and utilize statistical and machine learning methods to extract information from large photometric survey dataset such as the Vera R. Observatory's LSST, the Subaru Telescope's Hyper Suprime-Cam (HSC), and Roman Space Telescope's High Latitude Imaging Survey.</p>
 
 							<div class="row">
 								<div class="col-6 col-12-mobile">
@@ -157,7 +168,7 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p>Email: tianqinz at andrew.cmu.edu</p>
+							<p>Email: tq96zhang at gmail.com</p>
 
 							<form method="post" action="#">
 								<div class="row">
