--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							<p></p>
 
 							<footer>
-								<a href="data/cv_nov_2024.pdf" class="button scrolly">My CV</a>
+								<a href="data/cv_jul_2025.pdf" class="button scrolly">My CV</a>
 							</footer>
 							<footer>
 								<a href="https://inspirehep.net/authors/2704737?ui-citation-summary=true" class="button scrolly">Publication List</a>
