update main page

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 								<a href="data/cv_jul_2025.pdf" class="button scrolly">My CV</a>
 							</footer>
 							<footer>
-								<a href="https://inspirehep.net/authors/2704737?ui-citation-summary=true" class="button scrolly">Publication List</a>
+								<a href="https://ui.adsabs.harvard.edu/search/q=docs(library%2Fe-oFFVJMSqifbMoeN_iXSw)" class="button scrolly">Publication List</a>
 							</footer>
 
 						</div>
@@ -80,10 +80,8 @@
 						<div class="container">
 
 							<div class="row">
-								<div class="col-6 col-12-mobile">
+								<div class="col-9 col-12-mobile">
 									<!-- <p>  -->
-									Hello there!  <br> <br>
-
 									I am an observational cosmologist. I use large extragalactic datasets from the Subaru Telescope, Rubin
 									Observatory, and Nancy Grace Roman Space Telescope
 									to study the evolution of the universe, nature of dark matter, and dark energy. I use techniques such as the weak gravitational lensing and galaxy clustering, etc. I particularly study observational systematics that can impact these analysis, such as the Point Spread Function (PSF) and the photometric redshift (photo-z) <br> <br>
@@ -106,8 +104,12 @@
 										<header>
 											<h3> Tannoudji </h3>
 										</header>
+										<a href="#" class="image fit"><img src="images/point_reyes.jpeg" alt="" /></a>
+										<header>
+											<h3> Point Reyes, CA <br> <br>Credit: Jocelyn Zhang</h3>
+										</header>
 								</div>
-								<div class="col-3 col-12-mobile">
+	<!-- 							<div class="col-3 col-12-mobile">
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/point_reyes.jpeg" alt="" /></a>
 										<header>
@@ -116,7 +118,7 @@
 								
 								
 
-							</div>
+								</div> -->
 
 						</div>
 					</section>
