message service in maintenance

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 									<!-- <p>  -->
 									I am an observational cosmologist. I use large extragalactic datasets from the Subaru Telescope, Rubin
 									Observatory, and Nancy Grace Roman Space Telescope
-									to study the evolution of the universe, nature of dark matter, and dark energy. I use techniques such as the weak gravitational lensing and galaxy clustering, etc. I particularly study observational systematics that can impact these analysis, such as the Point Spread Function (PSF) and the photometric redshift (photo-z) <br> <br>
+									to study the structure of the universe, nature of dark matter and dark energy. I use techniques such as the weak gravitational lensing and galaxy clustering, etc. I particularly study observational systematics that can impact these analysis, such as the Point Spread Function (PSF) and the photometric redshift (photo-z). <br> <br>
 
 									I am Research Assistant Professor at University of Pittsburgh and a LINCC Frameworks research scientist. Previously, I was a graduate student at McWilliams Center for Cosmology, Carnegie Mellon University. I did my undergrad at Duke University and Shanghai Jiao Tong University. I have been passionate about Astronomy since 15. <br> <br>
 
@@ -227,7 +227,7 @@
 							</header>
 
 							<p>Email: tq96zhang at gmail.com</p>
-
+<!-- 
 							<form method="post" action="#">
 								<div class="row">
 									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
@@ -239,7 +239,7 @@
 										<input type="submit" value="Send Message" />
 									</div>
 								</div>
-							</form>
+							</form> -->
 
 						</div>
 					</section>
