Update About Me: change IBM reference to NLP internship

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 									<!-- <p>  -->
 									I am an observational cosmologist who works with large extragalactic datasets from the Rubin
 									Observatory, the Hyper Suprime-Cam on the Subaru Telescope, and the Nancy Grace Roman Space Telescope
-									to study the large-scale structure of the Universe and the nature of dark matter and dark energy. My
+									to study the large-scale structure of the Universe and the nature of dark energy. My
 									research employs techniques such as weak gravitational lensing and galaxy clustering, and focuses on
 									observational systematics that can bias these analyses, including the Point Spread Function (PSF) and
 									photometric redshift (photo-z) estimation.<br> <br>
@@ -141,7 +141,7 @@
 									studies at Duke University and Shanghai Jiao Tong University. I have been passionate about astronomy since I was 15.<br> <br>
 									
 									I develop and adapt Machine Learning techniques for photometric redshift estimation and feature
-									extraction. In 2018, I have contributed to Natural Language Processing at IBM.<br> <br>
+									extraction. In 2018, I interned as a Natural Language Processing engineer.<br> <br>
 
 									I am based in Pittsburgh, PA, and occasionally visit the Bay Area in California.<br> <br>
 
